--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
+    "mongodb": "^4.4.1",
     "mongoose": "^6.0.13",
     "multer": "^1.4.3",
     "socket.io": "^4.4.0"
